[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/fps_player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/femaleModel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/maleModel.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.96509

[sub_resource type="CapsuleShape" id=2]
radius = 0.55
height = 2.05

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.45, 0.318, 0.45 )

[sub_resource type="BoxShape" id=4]

[node name="fps_player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="marker" type="CSGPolygon" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79816, 0 )
visible = false
polygon = PoolVector2Array( 0.5, 0.5, 0, 0, 0, 1 )
mode = 1
spin_degrees = 360.0
spin_sides = 8

[node name="collision_body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.109473, 0 )
shape = SubResource( 1 )

[node name="damage_area" type="Area" parent="."]

[node name="area_collision_body" type="CollisionShape" parent="damage_area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.109, 0 )
shape = SubResource( 2 )

[node name="collision_feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07482, 0 )
shape = SubResource( 3 )

[node name="player_model" type="Spatial" parent="."]
transform = Transform( -1.65, 0, 1.44248e-07, 0, 1.65, 0, -1.44248e-07, 0, -1.65, 0, -1.395, 0 )

[node name="femaleModel" parent="player_model" instance=ExtResource( 2 )]
visible = false

[node name="maleModel" parent="player_model" instance=ExtResource( 3 )]

[node name="rotation_helper" type="Spatial" parent="."]

[node name="head" type="Camera" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39, 0.00883722 )
current = true

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39, 2.5 )
near = 0.1

[node name="gun_fire_points" type="Spatial" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89, -2 )

[node name="grab_objects" type="Spatial" parent="rotation_helper/gun_fire_points"]

[node name="Area" type="Area" parent="rotation_helper/gun_fire_points/grab_objects"]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="rotation_helper/gun_fire_points/grab_objects/Area"]
shape = SubResource( 4 )

[node name="gun_aim_points" type="Spatial" parent="rotation_helper"]

[node name="player_flashlight" type="SpotLight" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.521569, -0.462059 )
shadow_enabled = true
spot_range = 11.5324
spot_angle_attenuation = 0.420448

[node name="grenade_toss_position" type="Spatial" parent="rotation_helper"]

[node name="player_hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reticle" type="Control" parent="player_hud"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="player_hud/Reticle"]
margin_left = -2.0
margin_top = -2.0
margin_right = 22.0
margin_bottom = 22.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="player_hud/Reticle"]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="rotation_helper/gun_fire_points/grab_objects/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="rotation_helper/gun_fire_points/grab_objects/Area" to="." method="_on_Area_body_exited"]
